--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^3.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "sass": "^1.80.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
