--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-open-weather": "^1.3.8",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^3.0.1",
+    "react-weather": "^0.1.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.80.6",
+    "weather-react-icons": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
